--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 *,
 *::before,
@@ -25,7 +25,7 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
     scroll-behavior: smooth;
-    font-family: 'Rubik', sans-serif;
+    font-family: "Rubik", sans-serif;
     background-color: #202124;
     color: #f7f7f7;
 }
@@ -76,9 +76,9 @@ label,
 button,
 select,
 summary,
-[type='radio'],
-[type='submit'],
-[type='checkbox'] {
+[type="radio"],
+[type="submit"],
+[type="checkbox"] {
     cursor: pointer;
 }
 
@@ -93,7 +93,7 @@ summary,
 
 header {
     min-height: 18rem;
-    background-image: url('./assets/pattern-bg-desktop.png');
+    background-image: url("./assets/pattern-bg-desktop.png");
     background-size: cover;
     background-position: center;
     display: flex;
@@ -192,9 +192,13 @@ header form button:hover {
     bottom: 1.3rem;
 }
 
+.mapContainer {
+    z-index: -1;
+}
+
 @media (max-width: 768px) {
     header {
-        background-image: url('./assets/pattern-bg-mobile.png');
+        background-image: url("./assets/pattern-bg-mobile.png");
         padding-block-end: 9rem;
     }
 
